# bgfxGWEN

./: CMakeLists.txt  README.md
Renderer/: bgfxRenderer.cpp  bgfxRenderer.h  stb_truetype.h
Sample/: bgfxSample.cpp
gmake-linux/: GWEN_Static.make  GWEN_UnitTest.make  Makefile  bgfxGwenRenderer.make  bgfxGwenSample.make
premake/: premake5.lua
vs2019/: GWEN_Static.vcxproj  GWEN_UnitTest.vcxproj  bgfxGWEN.sln  bgfxGwenRenderer.vcxproj  bgfxGwenSample.vcxproj  bgfxGwenSample.vcxproj.filters
